--- a/src/app/project-detail/project-detail.component.scss
+++ b/src/app/project-detail/project-detail.component.scss
@@ -63,6 +63,7 @@
 
   img {
     max-height: 50vh;
+    max-width: 99%;
   }
 }
 
