--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -39,7 +39,6 @@ a:hover {
       background-color: #ffffff;
   }
   .project-wraper img {
-      margin: 2rem 0;
       display: block;
       width: 100%;
       height: 100%;
@@ -103,12 +102,11 @@ a:hover {
   box-shadow: inset 0 0 0 2px rgb(44, 195, 239);
 }
 
-.best-project-image:hover {
-  transform: scale(1.05)
+.project-image-div:hover {
+  transform: scale(1.02)
 }
 
 .best-project-image {
-  transition: 0.2s ease-out;
   width: 100%;
   display: block;
 }
@@ -116,7 +114,9 @@ a:hover {
 .project-image-div {
   display: inline-block;
   overflow: hidden;
-  margin: 2rem 0;
+  margin: 4rem 0;
+  transition: 0.2s ease-out;
+
 }
 
 .articles-wraper {
