--- a/src/app/shared/project-info-modal/project-info-modal.component.scss
+++ b/src/app/shared/project-info-modal/project-info-modal.component.scss
@@ -32,7 +32,7 @@
   animation-delay: 0.2s;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
-  background-image: url("../../../assets/images/projectsBG.jpg");
+  background-image: url(../../../assets/images/backgroundRecompressed.jpg);
   background-size: cover;
   background-repeat: repeat;
 }
